<?xml version="1.0"?>
<package>
  <name>arduino_robot</name>
  <version>0.0.1</version>
  <description>The arduino robot package</description>

  <maintainer email="user@todo.todo">Casper</maintainer>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
